# git-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: index  index2
doc/: file_status.md
src/: context.rs  db.rs  error.rs  filecache.rs  index.rs  main.rs
src/commands/: add.rs  init.rs  mod.rs
src/context/: mod.rs
src/core/: mod.rs  repository.rs  stage.rs  working_area.rs
src/object/: blob.rs  commit.rs  mod.rs  tree.rs
src/parser/: decode.rs  mod.rs
src/refs/: mod.rs
src/repository/: mod.rs
src/utils/: bytes.rs  mod.rs  path.rs  sha1.rs
