[package]
name = "git-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

# for zlib compress and parse
flate2 = "1.0"
sha-1 = "0.9"
hex-literal = "0.3"
nom = "7.1.0"
bytes = "1.1"
itoa = "0.4"

# command line interface
structopt = { version = "0.3", default-features = false }

# logging
log = "0.4"
simplelog = "0.11.0"

# error handling
thiserror = "1.0"

# file system
walkdir = "2"

# other utils
lazy_static = "1.4.0"
